--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/material": "^5.14.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
